--- a/inspirations.html
+++ b/inspirations.html
@@ -9,12 +9,12 @@
 <body>
 
 <header>
-<h1><a href="home.html" id="toplink">DEREK GRITZ</a></h1>
+<h1><a href="index.html" id="toplink">DEREK GRITZ</a></h1>
 </header>
 
 <nav>
 	<ul>
-		<li><a href="home.html" class="bar">Home</a></li>
+		<li><a href="index.html" class="bar">Home</a></li>
 		<li><a href="inspirations.html" class="bar">Inspirations</a></li>
 		<li><a href="work.html" class="bar">Work</a></li>
 
