--- a/inspirations.html
+++ b/inspirations.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="main.css">
-	<title>Derek</title>
+	<title>Derek Gritz's Inspirations</title>
 </head>
 
 <body>
