--- a/index.html
+++ b/index.html
@@ -8,29 +8,14 @@
 
 <body>
 
-<header>
-<h1><a href="/" id="toplink">DEREK GRITZ</a></h1>
-</header>
-
-<nav>
-	<ul>
-		<li><a href="/" class="bar">Home</a></li>
-		<li><a href="inspirations.html" class="bar">Inspirations</a></li>
-		<li><a href="work.html" class="bar">Work</a></li>
-
-	</ul>
-</nav>
-
 <article>
-	<h2><span class="firstwords">Hi!</span> My name is Derek.</h2>
-	<p>I'm almost a sophomore at Yale University, where I'm learning to do things. As a member of Calhoun College, I have yet to win an intramural game. I like sports and movies. And TV too. Check out my <a href="inspirations.html">heroes</a> to see who shaped the man I am today, and see my <a href="work.html">work</a> to see how I'm looking to build a better <a href="#america">America</a>.
-	</p>
+<span></span>
 </article>
 
-<div><img src="america.jpg" alt ="america" id="america"></div>
+<div></div>
 
 <footer>
-	<span>contact: <a href="mailto:derek.gritz@yale.edu"><img src="email.jpg" alt="email" class="contact"></img></a> | <a href="http://facebook.com/dgritz"><img src="fb.png" alt="Facebook" class="contact"></img></a></span>
+	<span><center><a href="mailto:derek.gritz@yale.edu"><img src="email.jpg" alt="email" class="contact"></img></a> | <a href="http://facebook.com/dgritz"><img src="fb.png" alt="Facebook" class="contact"></img></a><center></span>
 </footer>
 
 </body>
